# gramine

./: meson.build
Documentation/: manifest-syntax.rst
Documentation/_templates/: layout.html
LibOS/shim/include/: shim_fs.h  shim_fs_encrypted.h
LibOS/shim/include/arch/x86_64/: shim_internal-arch.h
LibOS/shim/src/fs/: shim_fs_encrypted.c
LibOS/shim/src/fs/chroot/: encrypted.c  fs.c
LibOS/shim/test/fs/: open_flags.c
LibOS/shim/test/regression/: test_libos.py
Pal/src/host/Linux-SGX/: db_main.c  db_process.c  sgx_main.c
Pal/src/host/Linux-SGX/tools/common/: meson.build
common/src/: generated_offsets_print.c
libos/include/: meson.build
libos/src/: meson.build
libos/src/arch/x86_64/: meson.build
libos/test/regression/: hostname_emulate_etc.manifest.template  test_libos.py  tests.toml  tests_musl.toml
pal/include/pal/: pal.h
pal/src/host/linux/: pal_main.c
pal/src/host/linux-common/: etc_host_info.c
pal/src/host/linux-sgx/: host_main.c  pal_main.c
